complete search func and errors.html process
